# mindforge

./: .gitignore  LICENSE.txt  PUBLISH.md  README.md  pyproject.toml  requirements.txt  run_example.sh
docs/: ARCHITECTURE.md  GETTING_STARTED.md
examples/: 01_basic_usage.py  02_memory_types.py  03_multi_model_support.py  full_example.py  multi_level_memory_example.py
mindforge/: __init__.py  config.py  main.py
mindforge/core/: __init__.py  base_model.py  memory_manager.py  memory_store.py  memory_types.py
mindforge/interfaces/: memory_interface.py  model_interface.py
mindforge/models/: __init__.py
mindforge/models/chat/: __init__.py  azure.py  litellm.py  ollama.py  openai.py
mindforge/models/embedding/: __init__.py  azure.py  litellm.py  ollama.py  openai.py
mindforge/storage/: __init__.py  base_storage.py  chroma_engine.py  postgres_vec_engine.py  redis_vec_engine.py  sqlite_engine.py  sqlite_vec_engine.py
mindforge/utils/: __init__.py  clustering.py  errors.py  graph.py  logging.py  monitoring.py  optimization.py  profiling.py  validation.py
tests/: test_memory_levels.py
tests/core/: test_memory_manager.py  test_memory_store.py
tests/storage/: test_sqlite_engine.py
