[project]
name = "mindforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.8.0",
    "numpy>=1.24.0,<2.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "sqlite-vec>=0.1.0",
    "litellm>=1.0.0",
    "chromadb>=0.4.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
]
